tests/ui/empty/empty-linkname.rs
<<<PULL-UPSTREAM>>> file deleted upstream; move the Ferrocene annotations if any, and delete this file
#[link(name = "")] //~ ERROR: link name must not be empty
extern "C" {}

fn main() {}

// ferrocene-annotations: fls_o0f9ae22ug1x
// Attribute link
